vcc_k8s/namespace.yaml
kind: Namespace
apiVersion: v1
  metadata:
    name: vcc
  labels:
    name: vcc
