vcc_k8s/botservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botservice
  labels:
    app: bot
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
        tier: backend
    spec:
      containers:
      - name: bot
        image: "ghcr.io/vcc-chat/vcc_rpc"
        command: ["/usr/local/bin/python3.11","/app/services/bot.py"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
