vcc_k8s/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
        tier: backend
    spec:
      containers:
      - name: chat
        image: "ghcr.io/vcc-chat/vcc_rpc"
        command: ["/usr/local/bin/python3.11","/app/services/chat.py"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
