vcc_k8s/file.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file
  labels:
    app: file
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
        tier: backend
    spec:
      containers:
      - name: file
        image: "ghcr.io/vcc-chat/vcc_rpc"
        command: ["/usr/local/bin/python3.11","/app/services/file.py"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
