vcc_k8s/login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  labels:
    app: login
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
        tier: backend
    spec:
      containers:
      - name: login
        image: "ghcr.io/vcc-chat/vcc_rpC"
        command: ["/usr/local/bin/python3.11","/app/services/login.py"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
