vcc_k8s/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot
  labels:
    app: bot
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
      labels:
        app: bot
        tier: backend
    spec:
      containers:
      - name: bot
        image: "ghcr.io/vcc-chat/bot"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 2470
---
apiVersion: v1
kind: Service
metadata:
  name: bot
  labels:
    app: bot
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 2470
    targetPort: 2470
  selector:
    app: bot
    tier: backend
