vcc_k8s/oauth_github.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-github
  labels:
    app: oauth-github
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-github
  template:
    metadata:
      labels:
        app: oauth-github
        tier: backend
    spec:
      containers:
      - name: oauth-github
        image: "ghcr.io/vcc-chat/vcc_rpc"
        command: ["/usr/local/bin/python3.11","/app/services/oauth_github.py"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-github
  labels:
    app: oauth-github
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: oauth-github
    tier: backend
