vcc_k8s/rpcserver_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rpcserver
  labels:
    app: rpcserver
    tier: backend
spec:
  ports:
  - port: 2474
  selector:
    app: rpcserver
    tier: backend
