vcc_k8s/webvcc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webvcc
  labels:
    app: webvcc
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webvcc
  template:
    metadata:
      labels:
        app: webvcc
        tier: backend
    spec:
      containers:
      - name: webvcc
        image: "ghcr.io/vcc-chat/webvcc"
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 2479
---
apiVersion: v1
kind: Service
metadata:
  name: webvcc
  labels:
    app: webvcc
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 2479
    targetPort: 2479
  selector:
    app: webvcc
    tier: backend
