vcc_k8s/webvcc_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webvcc
  labels:
    app: webvcc
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 2479
    targetPort: 2479
  selector:
    app: webvcc
    tier: backend
