vcc_k8s/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcc_webgateway
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webvcc
            port:
              number: 2479
